GITBOOK-549: change request with no subject merged in GitBook